app/assets/stylesheets/custom.scss
@import "bootstrap-sprockets";
@import "bootstrap";

// RESET
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
ol, ul, li {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

// MIXINS AND VARIABLES

  // COLOURS
  $base: #fff;
  $text: #111;
  $links: #888;

  // FONTS
  $header: 'Baloo Bhaina', cursive;
  $copy: 'Roboto', sans-serif;

// GLOBAL STYLES
html {
  font-family: $copy;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
h1, h2, h3, h4, h5, h6 {
  font-family: $header;
}
.content {
  width: 100%;
  max-width: 980px;
  margin: auto;
  padding: 20px;
  flex: 1 1 auto;
}

// HERO STYLES
.hero {
  background-image: url("/app/assets/images/desk.jpeg");
  background-position: center center;
  width: 100%;
  background-size: cover;
  height: 50vh;
}
.home-signup {
  background-color: rgba(0, 0, 0, 0.1);
  display: inline-block;
  width: 30vw;
  padding: 5px;
}

// FORM STYLES
.form-control {
  width: 300px;
  margin-bottom: 5px;
}

// FOOTER STYLES
footer {
  width: 100%;
  height: 200px;
  background-color: #000;
}

// HEADER STYLES
header {
  width: 100%;
  height: 70px;
  position: relative;
}
.nav {
  width: 100%;
  max-width: 980px;
  margin: auto;
  position: absolute;
  bottom: 50%;
  left: 50%;
  transform: translate(-50%, 50%);
  li {
    float: right;
    display: inline-block;
    margin: 0;
    a {
      text-decoration: none;
      color: #444;
      &:hover {
        color: #888;
        background-color: #fff;
      }
    }
  }
}
.logo {
  float: left;
  font-family: $header;
  font-size: 30px;
  margin-left: 20px;
  position: absolute;
  bottom: 50%;
  transform: translate(0, 60%);
  color: #444;
  &:hover {
    text-decoration: none;
    color: #888;
  }
}
.dropdown-toggle {
  background-color: #eee;
  &:hover {
    background-color: #eee !important;
  }
}
.edge-link {
  margin-right: 20px !important;
}
.dropdown-menu {
  width: 99.19px;
  min-width: 0;
  li {
    width: 100%;
    text-align: center;
  }
}

// LIST ITEM STYLES
.item_content {
  padding: 0;
}

